syntax = "proto3";

option go_package = "github.com/go-clarum/agent/interface/grpc/agent/internal/api";

import "interface/grpc/agent/internal/api/commands/cmd/cmd.proto";
import "interface/grpc/agent/internal/api/commands/http/http.proto";

service AgentApi {
  rpc Status(StatusRequest) returns (StatusResponse) {}
  rpc Session(stream ActionCommand) returns (stream CommandResponse) {}
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse) {}
}

message StatusRequest {}
message StatusResponse {
  string version = 1;
}

message InitSessionCommand {
  string clientName = 1;
}

message InitSessionResult {
  string sessionId = 1;
}

message ActionCommand {
  oneof action {
    InitSessionCommand initSession = 1;
    cmd.InitEndpointCommand initEndpoint = 2;
    cmd.ShutdownEndpointCommand shutdownEndpoint = 3;
    http.InitClientCommand initClient = 4;
    http.InitServerCommand initServer = 5;
    http.ClientSendActionCommand clientSendAction = 6;
    http.ClientReceiveActionCommand clientReceiveAction = 7;
    http.ServerSendActionCommand serverSendAction = 8;
    http.ServerReceiveActionCommand serverReceiveAction = 9;
  }
}

message CommandResponse {
    oneof result {
      InitSessionResult initSessionResult = 1;
      cmd.InitEndpointResult initEndpointResult = 2;
      cmd.ShutdownEndpointResult shutdownEndpointResult = 3;
      http.InitClientResult initClientResult = 4;
      http.InitServerResult initServerResult = 5;
      http.ClientSendActionResult clientSendActionResult = 6;
      http.ClientReceiveActionResult clientReceiveActionResult = 7;
      http.ServerSendActionResult serverSendActionResult = 8;
      http.ServerReceiveActionResult serverReceiveActionResult = 9;
    }
}

message ShutdownRequest {}
message ShutdownResponse {
}
